--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,30 @@
 <header>
-  <nav>
-    <a [routerLink]="['']">Home</a>
-    <a [routerLink]="['about']">About</a>
+
+  <nav class="container navbar navbar-light bg-faded">
+    <a class="navbar-brand" href="#">Centrum Hlášení</a>
+    <ul class="nav navbar-nav">
+      <li class="nav-item active">
+        <a [routerLink]="['']">Přidat hlášení <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a [routerLink]="['about']">Sekce2</a>
+      </li>
+
+      </ul>
+     <ul class="float-xs-right">
+
+      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    </ul>
+
   </nav>
 </header>
-<main>
-  <h1>Hello from {{api.title}}!</h1>
+<main class="container">
 
   <!-- Images (and assets) are parsed and loaded from within the public directory -->
-  <img src="/img/angular.png">
+
 
   <router-outlet></router-outlet>
 </main>
 <footer>
-  <a [href]="url">Webpack Angular 2 Starter</a>
+  Footer
 </footer>
