[master] version 1.1 added login

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,5 @@
-<p>
-  About Works!
-</p>
+<ul class="list-group">
+    <li *ngFor="let key of arrayOfKeys" class="list-group-item">
+        {{key}} - {{report[key]}}
+    </li>
+</ul>
