--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,16 +4,21 @@
     <a class="navbar-brand" href="#">Centrum Hlášení</a>
     <ul class="nav navbar-nav">
       <li class="nav-item active">
-        <a [routerLink]="['']">Přidat hlášení <span class="sr-only">(current)</span></a>
+        <a [routerLink]="['']">Home<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a [routerLink]="['about']">Sekce2</a>
+        <a [routerLink]="['about']">Detail hlášení</a>
+
+      </li>
+      <li class="nav-item">
+        <a [routerLink]="['report']">Vlozit hlášení</a>
+
       </li>
 
       </ul>
      <ul class="float-xs-right">
 
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li *ngIf="loggedIn"><a [routerLink]="['/login']"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
     </ul>
 
   </nav>
