--- a/src/app/report/report-add.component.html
+++ b/src/app/report/report-add.component.html
@@ -1,8 +1,9 @@
-<form>
+<form #f="ngForm">
+  <!--{{diagnostic}}-->
   <div class="form-group row">
     <label for="input3" class="col-sm-2 col-form-label">Firma</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="input3" placeholder="Firma">
+      <input name="companyId" [(ngModel)]="report.companyId"  type="text" class="form-control" id="input3" placeholder="Firma">
     </div>
   </div>
   <div class="form-group row">
@@ -42,7 +43,7 @@
   </div>
   <div class="form-group row">
     <div class="offset-sm-2 col-sm-10">
-      <button type="submit" class="btn btn-primary">Založit hlášení</button>
+      <button (click)="save()" type="button" class="btn btn-primary">Založit hlášení</button>
     </div>
   </div>
 </form>
