--- a/src/app/report/report-add.component.html
+++ b/src/app/report/report-add.component.html
@@ -1,49 +1,75 @@
-<form #f="ngForm">
-  <!--{{diagnostic}}-->
+<form (ngSubmit)="onSubmit()" #reportForm="ngForm">
+
+
   <div class="form-group row">
     <label for="input3" class="col-sm-2 col-form-label">Firma</label>
     <div class="col-sm-10">
-      <input name="companyId" [(ngModel)]="report.companyId"  type="text" class="form-control" id="input3" placeholder="Firma">
+      <input name="companyId" [(ngModel)]="report.companyId"
+             type="text" class="form-control" id="input3"
+             placeholder="Firma" required>
     </div>
   </div>
   <div class="form-group row">
     <label for="inputPassword3" class="col-sm-2 col-form-label">Osoba</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="inputPassword3" placeholder="Osoba">
+      <input name="customerId" type="text" [(ngModel)]="report.customerId" class="form-control" id="inputPassword3"
+             placeholder="Osoba" required>
     </div>
   </div>
   <div class="form-group row">
     <label for="input4" class="col-sm-2 col-form-label">Systém</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="input4" placeholder="Systém">
+      <input name="systemId" type="text" [(ngModel)]="report.systemId" class="form-control" id="input4"
+             placeholder="Systém" required>
     </div>
   </div>
   <div class="form-group row">
     <div class="col-xs-6">
       <div ngbDropdown class="d-inline-block">
-        <button class="btn btn-outline-primary" id="dropdownMenu1" ngbDropdownToggle>Druh hlášení</button>
+        <button class="btn btn-outline-primary" id="dropdownMenu1" ngbDropdownToggle>
+          {{report.reportType ?report.reportType : 'Druh hlášení'}}
+        </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
-          <button class="dropdown-item">Dotaz</button>
-          <button class="dropdown-item">Požadavek</button>
-          <button class="dropdown-item">Vada</button>
-          <button class="dropdown-item">Námět</button>
+          <button *ngFor="let type of reportTypes" class="dropdown-item" (click)="setReportType(type)">{{type}}</button>
         </div>
       </div>
     </div>
   </div>
+  <div class="form-group row">
+    <label for="name" class="col-sm-2 col-form-label">Název hlašení</label>
+    <div class="col-sm-10">
+      <input name="name" [(ngModel)]="report.name"
+             type="text" class="form-control" id="name"
+             placeholder="Název hlášení">
+    </div>
+  </div>
   <div class="form-group">
     <label for="exampleTextarea">Text hlášení</label>
-    <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+    <textarea name="reportText" [(ngModel)]="report.reportText"
+              class="form-control" id="exampleTextarea" rows="3" required>
+
+    </textarea>
   </div>
   <div class="form-group row">
-    <label for="input5" class="col-sm-2 col-form-label">Garant hlášení</label>
+    <label for="garant" class="col-sm-2 col-form-label">Garant hlášení</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="input5" placeholder="Garant hlášení">
+      <input name="garant" [(ngModel)]="report.garantUserCode"
+        type="text" class="form-control" id="garant" placeholder="Garant hlášení" required>
     </div>
   </div>
   <div class="form-group row">
+    <label for="solvingUserCode" class="col-sm-2 col-form-label">Řešitel</label>
+    <div class="col-sm-10">
+      <input name="solvingUserCode" type="text" [(ngModel)]="report.solvingUserCode" class="form-control"
+             id="solvingUserCode"
+             placeholder="Řešitel" required>
+    </div>
+  </div>
+
+  <div class="form-group row">
     <div class="offset-sm-2 col-sm-10">
-      <button (click)="save()" type="button" class="btn btn-primary">Založit hlášení</button>
+      <button [disabled]="loading" type="submit" class="btn btn-primary">Založit hlášení</button>
     </div>
   </div>
 </form>
+<pre>{{diagnostic | json}}</pre>
