--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,32 @@
 <header ng-controller="MainCtrl as main">
 
   <nav class="container navbar navbar-light bg-faded">
-    <a class="navbar-brand" href="#">Centrum Hlášení</a>
+    <a class="navbar-brand" href="#">
+      <img src="/img/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+      Centrum Hlášení</a>
     <ul class="nav navbar-nav">
       <li class="nav-item active">
-        <a [routerLink]="['']">Home<span class="sr-only">(current)</span></a>
+        <a [routerLink]="['']"  class="nav-link">Home<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a [routerLink]="['/report/1']">Detail hlášení</a>
+        <a [routerLink]="['/reports']" class="nav-link">Hlášení</a>
 
       </li>
       <li class="nav-item">
-        <a [routerLink]="['add-report']">Vlozit hlášení</a>
+        <a [routerLink]="['/report/1']"  class="nav-link">Detail hlášení</a>
+
+      </li>
+      <li class="nav-item">
+        <a [routerLink]="['add-report']"  class="nav-link">Vlozit hlášení</a>
 
       </li>
 
       </ul>
      <ul class="float-xs-right">
 
-      <li *ngIf="loggedIn"><a [routerLink]="['/login']"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+      <li *ngIf="loggedIn"><a [routerLink]="['/login']"  class="nav-link"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
     </ul>
+
 
   </nav>
   <!--<pre>$location.path() = {{main.$location.path()}}</pre>-->
@@ -28,6 +35,7 @@
   <!--<pre>$routeParams = {{main.$routeParams}}</pre>-->
 </header>
 <main ng-view class="container">
+  <alert></alert>
 
   <!-- Images (and assets) are parsed and loaded from within the public directory -->
 
