--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,7 +13,7 @@ header {
 main {
   padding: 1em;
   font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
+  //text-align: center;
   margin-top: 50px;
   display: block;
 }
