--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-4 offset-sm-3">
         <h2>Login</h2>
 
         <!--<form ngNoForm action="http://localhost:8080/login" method="POST">-->
