--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,11 +13,11 @@
 
       </li>
       <li class="nav-item">
-        <a [routerLink]="['/report/1']"  class="nav-link">Detail hlášení</a>
+        <a [routerLink]="['/report/1/edit']"  class="nav-link">Detail hlášení</a>
 
       </li>
       <li class="nav-item">
-        <a [routerLink]="['add-report']"  class="nav-link">Vlozit hlášení</a>
+        <a [routerLink]="['report/add']"  class="nav-link">Vlozit hlášení</a>
 
       </li>
 
