--- a/src/app/report-form/report-form.component.css
+++ b/src/app/report-form/report-form.component.css
@@ -31,16 +31,19 @@
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 0.25rem;
 }
-/*.ng-valid[required], .ng-valid.required  {*/
-  /*border-left: 5px solid #42A948; !* green *!*/
-/*}*/
+.ng-valid[required], .ng-valid.required  {
+  display: block;
+  -webkit-background-size: 1.25rem 1.25rem;
+  background-size: 1.25rem 1.25rem;
+  border-left: 5px solid #42A948; /* green */
+  border-radius: .6rem;
+}
 
 .ng-invalid:not(form)  {
   display: block;
   -webkit-background-size: 1.25rem 1.25rem;
   background-size: 1.25rem 1.25rem;
-  border: 1px solid #a94442;
-  border-radius: .25rem;
+  border-left: 5px solid #a94442;
+  border-radius: .6rem;
 }
-
 
