--- a/src/app/report/report-detail.component.html
+++ b/src/app/report/report-detail.component.html
@@ -1,21 +1,47 @@
 <!--<pre>{{report | json}}</pre>-->
 <loading-container [loading]="loading">
-  <div class="row" *ngIf="report">
+  <div class="row" *ngIf="users">
     <div class="col-sm-9">
       <div class="blog-post">
         <h2 class="blog-post-title">{{report.name}}</h2>
-        <p class="blog-post-meta">{{report.dateOfCreation | date:'medium'}} od <a href="#">{{report.customerId}}</a></p>
+        <p class="blog-post-meta">{{report.dateOfCreation | date:'medium'}} od <a href="#">{{users[report.customerId]}}</a></p>
 
         <p>{{report.reportText}}</p>
       </div>
       <div class="blog-post" *ngIf="report.solutionText">
         <h2 class="blog-post-title">Řešení</h2>
-        <p class="blog-post-meta">{{report.solutionDate | date:'medium'}} od <a href="#">{{report.solvedUserCode}}</a></p>
+        <p class="blog-post-meta">{{report.solutionDate | date:'medium'}} od <a href="#">{{users[report.solvedUserCode]}}</a></p>
 
         <p>{{report.solutionText}}</p>
       </div>
       <div class="alert alert-info" role="alert" *ngIf="!report.solutionText">
-        Na řešení usilovně pracuje náš pracovník {{report.solvingUserCode}}
+        <div *ngIf="!isSolvingUser">
+          Na řešení usilovně pracuje náš pracovník {{users[report.solvingUserCode]}}
+        </div>
+
+        <div *ngIf="isSolvingUser">
+          <div class="form-group row">
+          <label for="solutionText" class="col-sm-2 col-form-label">Text řešení</label>
+
+            <div class="col-sm-10">
+          <textarea name="solutionText" [(ngModel)]="solution.text"
+                    class="form-control" id="solutionText" rows="4">
+          </textarea>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="difficulty" class="col-sm-2 col-form-label">Pracnost</label>
+            <div class="col-sm-4">
+              <input name="difficulty" [(ngModel)]="solution.difficulty"
+                     type="number" class="form-control" id="difficulty"
+                     placeholder="Pracnost">
+            </div>
+            <div class="col-sm-3"></div>
+            <div class="col-sm-3 text-xs-right">
+              <button type="button" class="btn btn-info" (click)="onSolutionBtnClick()">Odeslat řešení</button>
+            </div>
+          </div>
+        </div>
       </div>
 
       <!--<div class="row">-->
@@ -46,6 +72,9 @@
       <communication  [reportId]="report.id" ></communication>
     </div>
     <div class="col-sm-3">
+      <div class="pb-1">
+        <button type="button" class="btn btn-info" (click)="onEditBtnClick()">Editovat hlášení</button>
+      </div>
       <table class="table table-striped">
         <tbody>
         <tr>
@@ -70,7 +99,7 @@
         </tr>
         <tr>
           <th scope="row">Zákazník</th>
-          <td>{{report.customerId}}</td>
+          <td>{{users[report.customerId]}}</td>
         </tr>
         <tr>
           <th scope="row">Termin</th>
@@ -91,6 +120,7 @@
         </tbody>
       </table>
     </div>
+
   </div>
 
 </loading-container>
