--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,15 +5,23 @@
       <img src="/img/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
       Centrum Hlášení</a>
     <ul class="nav navbar-nav">
-      <li class="nav-item active">
-        <a [routerLink]="['']"  class="nav-link">Home<span class="sr-only">(current)</span></a>
-      </li>
+      <!--<li class="nav-item active">-->
+        <!--<a [routerLink]="['']"  class="nav-link">Home<span class="sr-only">(current)</span></a>-->
+      <!--</li>-->
       <li class="nav-item">
         <a [routerLink]="['/reports']" class="nav-link">Hlášení</a>
 
       </li>
+      <!--<li class="nav-item">-->
+        <!--<a [routerLink]="['/report/1']"  class="nav-link">Detail hlášení</a>-->
+
+      <!--</li>-->
       <li class="nav-item">
-        <a [routerLink]="['/report/1/edit']"  class="nav-link">Detail hlášení</a>
+        <a [routerLink]="['/reports/resolved']"  class="nav-link">Vyřešená hlášení</a>
+
+      </li>
+      <li class="nav-item">
+        <a [routerLink]="['/reports/unresolved']"  class="nav-link">Nevyřešená hlášení</a>
 
       </li>
       <li class="nav-item">
