--- a/src/app/report/report-list.component.html
+++ b/src/app/report/report-list.component.html
@@ -1,7 +1,7 @@
 <!--<pre>{{reports | json}}</pre>-->
 <loading-container [loading]="loading">
   <div class="row" *ngIf="reports">
-    <h4>Vlastní hlášení</h4>
+    <h4>{{reportsHeader}}</h4>
     <table class="table table-striped">
       <thead>
       <tr>
@@ -21,32 +21,6 @@
 
       </tbody>
     </table>
-
-
-  </div>
-
-  <div class="row" *ngIf="solverReports">
-    <h4>Přidělená hlášení k vyřešení</h4>
-    <table class="table table-striped">
-      <thead>
-      <tr>
-        <th>#</th>
-        <th>Název</th>
-        <th>Rok</th>
-        <th>Obtížnost</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let item of solverReports">
-        <th scope="row"><a routerLink="/report/{{item.id}}">{{item.reportNumber}}</a></th>
-        <td class="align-baseline">{{item.name}}</td>
-        <td>{{item.reportYear}}</td>
-        <td>{{item.difficulty ? item.difficulty : '-'}}</td>
-      </tr>
-
-      </tbody>
-    </table>
-
 
   </div>
 </loading-container>
