--- a/src/app/report/report-list.component.html
+++ b/src/app/report/report-list.component.html
@@ -7,15 +7,15 @@
       <tr>
         <th>#</th>
         <th>Název</th>
-        <th>Rok</th>
-        <th>Obtížnost</th>
+        <th>Datum</th>
+        <th>Pracnost</th>
       </tr>
       </thead>
       <tbody>
       <tr *ngFor="let item of reports">
         <th scope="row"><a routerLink="/report/{{item.id}}">{{item.reportNumber}}</a></th>
         <td class="align-baseline">{{item.name}}</td>
-        <td>{{item.reportYear}}</td>
+        <td>{{item.dateOfCreation | date:'mediumDate'}}</td>
         <td>{{item.difficulty ? item.difficulty : '-'}}</td>
       </tr>
 
